# messages-rs

./: BENCHES.md  CHANGELOG.md  Cargo.toml  README.md  test.sh
.github/: CODEOWNERS
.github/workflows/: CI.yml
benches/: bench.rs
examples/: 01_ping.rs  02_notify.rs  03_fibonacci.rs  04_ring.rs  05_timed_stream.rs  06_async_std.rs  07_no_runtime.rs  08_websocket.rs  fibonacci.rs  ping.rs  ring.rs  simple.rs  simple_channels.rs
src/: actor.rs  address.rs  context.rs  envelope.rs  errors.rs  handler.rs  lib.rs  mailbox.rs  message.rs  registry.rs  request.rs  runner.rs  service.rs
src/runtime/: async_std.rs  empty.rs  mod.rs  tokio.rs
tests/: mod.rs  registry.rs
tests/tokio/: mod.rs  registry.rs
