[package]
name = "messages"
version = "0.1.2"
authors = ["Igor Aleksanov <popzxc@yandex.ru>"]
edition = "2018"
repository = "https://github.com/popzxc/messages-rs"
documentation = "https://docs.rs/messages"
readme = "README.md"
license = "MIT"
keywords = ["channels", "async", "actor", "utils", "actors"]
categories = ["rust-patterns"]
description = "A midground between channels and actors."

[dependencies]
futures = "0.3.5"
thiserror = "1.0"
async-trait = "0.1"

# Runtime section.
tokio = { version = "1.6", features = ["rt"], optional = true }
async-std = { version = "1.9", optional = true }
once_cell = { version = "1.7", optional = true }

[dev-dependencies]
tokio = { version = "1.6", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
anyhow = "1.0"
criterion = { version = "0.3", features = ["async_tokio"] }

[features]
default = ["runtime-tokio"] # TODO: Temporary for the development purposes!
runtime-tokio = ["tokio", "once_cell"]
runtime-async-std = ["async-std", "once_cell"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
features = ["runtime-tokio"]
